Added response codes to docs, Added getting and editing notes
